# corebot-bliki

./: .gitignore  LICENSE  corebot-bliki.cabal  project.hs
src/: CoreBot.hs  DefaultMain.hs  Paths_corebot_bliki.hs
src/Yesod/CoreBot/: Bliki.hs
src/Yesod/CoreBot/Bliki/: Base.hs  Config.hs  DB.hs  Prelude.hs  Store.hs  Widgets.hs
src/Yesod/CoreBot/Bliki/Cache/: UpdateHTML.hs
src/Yesod/CoreBot/Bliki/Resources/: Base.hs  Blog.hs  Data.hs  Static.hs  Wiki.hs
src/Yesod/CoreBot/Bliki/Widget/: Head.hs
static/: indirect_load.js  process_HTML_for_wiki.js
test/: static
