name:           corebot-bliki
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
data-files:     static/*.js
    
executable corebot-bliki
    main-is: DefaultMain.hs
    hs-source-dirs: src
    extensions:     TemplateHaskell
                    QuasiQuotes
                    TypeFamilies
                    MultiParamTypeClasses
                    FlexibleInstances
                    NoMonomorphismRestriction
                    OverloadedStrings
                    RankNTypes
                    ScopedTypeVariables
                    UndecidableInstances
                    EmptyDataDecls
                    GADTs
                    FlexibleContexts
    ghc-options:    -threaded
    build-depends:  base             >= 4.4.0,
                    aeson            >= 0.3.2.11,
                    blaze-builder    >= 0.3.0.1,
                    bytestring       >= 0.9.2.0,
                    containers       >= 0.4.1.0,
                    directory        >= 1.1.0.1,
                    filepath         >= 1.2.0.1,
                    filestore        >= 0.4.0.5,
                    http-types       >= 0.6.7,
                    monads-tf        >= 0.1.0.0,
                    pandoc           >= 1.9,
                    text             >= 0.11.1.5,
                    template-haskell >= 2.6.0.0,
                    time             >= 1.2.0.5,
                    yesod            >= 0.9.4.1
